--- a/css/index.css
+++ b/css/index.css
@@ -71,8 +71,6 @@ header nav {
 		justify-content: space-around;
 		align-items: center;
 		padding-bottom: 20px;
-		position: fixed;
-		top: 0;
         width: 100%;
         margin-top: 20px;
 	}
@@ -93,17 +91,46 @@ header nav {
         flex-direction: column-reverse;
         justify-content: space-around;
     }
-    .nav-links {
+    .nav-links{
         display: flex;
         flex-wrap: wrap;
+        width: 100%;
         justify-content: space-between;
     }
-
     .nav-links a {
         margin-top: 30px;
-        margin-right: 30px;
+        margin-right: 20px;
+        margin-left: 20px;
    }
 }
+
+@media (max-width: 500px){
+        nav {
+            position: sticky;
+        }
+    
+    .nav-links {
+            display: flex;
+            flex-direction: column;
+            padding: 0px;
+        }
+
+        .nav-links a {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            margin: 0px;
+            border-top: 1px solid grey;
+            text-align: center;
+        }
+
+        .nav-links a:last-child {
+            border-bottom: 1px solid grey;
+        }
+        img.logo{
+            padding-bottom: 15px;
+        }
+ }
+       
 	hr {
 		width: 90%;
 	}
@@ -124,6 +151,12 @@ header nav {
         }
     }
 
+    @media (max-width: 500px) {
+        .front {
+            padding: 10px;
+            margin: 10px;
+        }
+    }
 	.title{
 		display: flex;
 		flex-direction: column;
@@ -140,7 +173,6 @@ header nav {
         }
         
         .title h3:first-child {
-            padding-top: 100px;
             margin: 0px;
         } 
 
@@ -156,7 +188,8 @@ header nav {
             display: none;
         }
     }
-	
+    
+
 	.title h3 {
 		font-size: 80px;
 		text-align: center;
@@ -207,22 +240,47 @@ header nav {
 		display: flex;
 		justify-content: space-between;
 		margin-right: 20px;
-
-	}
-
+    }
+    
 	.top .content {
 		width: 45%;
 		margin-left: 10px;
 		padding-top: 25px;
 		padding-bottom: 25px;
 		padding-left: 25px;
-	}
-	
+    }
+    
+	@media (max-width: 500px) {
+        .top {
+        flex-direction: column;    
+        padding-left: 5px;   
+        }
+
+        .top .content {
+            width: 100%;
+            padding: 0px;
+        }
+
+        .top .content h2 {
+            padding-top: 35px;
+        }
+
+        .top .content p {
+            padding-bottom: 5px;
+        }
+    }
+
 	.middle {
-		padding: 30px;
+		padding: 20px;
 		
-	}
-	
+    }
+    
+    @media (max-width: 500px){
+        .middle {
+            padding: 10px;
+            padding-top: 40px;
+        }
+    }	
 	.middle img {
 		width: 100%;
 	}
@@ -239,7 +297,27 @@ header nav {
 		padding-left: 25px;
 		padding-bottom: 40px;
 	}
-	
+    
+    @media (max-width: 500px) {
+        .bottom {
+        flex-direction: column;
+        padding-left: 5px;
+        }
+
+        .bottom .content {
+            width: 100%;
+            padding: 0px;
+        }
+
+        .bottom .content h2 {
+            padding-top: 10px;
+        }
+
+        .bottom .content p {
+            padding-bottom: 25px;
+        }
+    }
+
 	hr {
 		width: 95%;
 		padding-right: 20px;
@@ -269,5 +347,12 @@ header nav {
 @media (max-width: 800px) {
     footer .copyright {
         padding-bottom: 10px;
+    }
+}
+
+@media (max-width: 500px) {
+    footer {
+    padding-left: 15px;
+    margin-left: 0px;
     }
 }
